skins/larry/mail.css
/* ... */
#messageheader.previewheader h3.subject {
	padding: 8px 8px 2px 0;
}

#messageheader.previewheader #contactphoto {
	display: block;
	position: absolute;
	top: 11px;
	left: 30px;
	width: 32px;
	height: 32px;
	overflow: hidden;
	background: url(images/contactpic_32px.png) center center no-repeat #fff;
	border-radius: 3px;
}

#messageheader.previewheader #contactphoto img {
	width: 32px;
	height: auto;
	border-radius: 3px;
}

#messageheader .message-headers {
	min-height: 60px;
}

#messageheader #contactphoto {
	display: block;
	position: absolute;
	top: 34px;
	left: 30px;
	width: 48px;
	height: 48px;
	overflow: hidden;
	border-radius: 4px;
	border: 1px solid #e6e6e6;
	background: url(images/contactpic_48px.png) center center no-repeat #fff;
}

#messageheader #contactphoto img {
	width: 48px;
	height: auto;
	border-radius: 4px;
}

#messageheader #countcontrols,
#messageheader #formatcontrols {
	position: absolute;
	top: 8px;
	right: 8px;
	text-align: right;
	white-space: nowrap;
}

#messageheader #formatcontrols {
	top: 38px;
	right: 8px;
}

#messageheader .pagenav .countdisplay {
	min-width: 0;
	padding-right: 0.5em;
	white-space: nowrap;
}

#messagecontent .leftcol,
#messagepreview .leftcol {
	margin-right: 252px;
	overflow-x: auto;
}

#messagecontent .rightcol,
#messagepreview .rightcol {
	float: right;
/*
	position: absolute;
	top: 10px;
	right: 10px;
	height: 90%;
*/
	width: 230px;
	margin: 8px;
	min-height: 200px;
	background: #f0f0f0;
	padding: 8px;
	border-radius: 4px;
}

#messagebody {
	position: relative;
	margin: 8px;
}

#message-objects div,
#messagebody span.part-notice {
	margin: 8px;
}

#message-objects div.notice,
#message-buttons div.notice {
	display: block;
	color: #960;
	border: 1px solid #ffdf0e;
	background-color: #fef893;
	background-position: 5px -83px;
	padding: 6px 12px 4px 30px;
	white-space: normal;
}

#message-objects div a.button,
#messagebody span.part-notice a.button {
	margin-left: 10px;
}

div.message-part,
div.message-htmlpart,
div.message-partheaders {
	padding: 10px 2px;
	border-top: 1px solid #ccc;
}

#messagebody div:first-child {
	padding-top: 0;
	border-top: 0;
}

div.message-part pre,
div.message-htmlpart pre,
div.message-part div.pre {
	margin: 0;
	padding: 0;
	font-family: monospace;
	font-size: 12px;
	white-space: -moz-pre-wrap !important;
	white-space: pre-wrap !important;
	white-space: pre;
}

div.message-part span.sig {
	color: #666;
}

div.message-part blockquote {
	color: blue;
	border-left: 2px solid blue;
	border-right: 2px solid blue;
	background-color: #F6F6F6;
	margin: 2px 0 2px 0;
	padding: 1px 8px 1px 10px;
}

div.message-part blockquote blockquote {
	color: green;
	border-left: 2px solid green;
	border-right: 2px solid green;
}

div.message-part blockquote blockquote blockquote {
	color: #900;
	border-left: 2px solid #b00;
	border-right: 2px solid #b00;
}

div.message-partheaders {
	margin-top: 8px;
	padding: 8px 0;
}

div.message-partheaders .headers-table {
	width: 100%;
}

div.message-partheaders .headers-table td.header-title {
	width: auto;
	padding-left: 0;
}

div.message-partheaders .headers-table td.header {
	width: 88%;
}

#messagebody > hr {
	color: #fff;
	background: #fff;
	border: 0;
	border-bottom: 2px solid #f0f0f0;
}

#messagebody fieldset.image-attachment {
	border: 0;
	border-top: 1px solid #ccc;
	margin-top: 1em;
}

#messagebody fieldset.image-attachment p > img {
	max-width: 80%;
}

#messagebody legend.image-filename {
	color: #999;
	font-size: 0.9em;
	margin: 0 1em;
}

#messagebody p.image-attachment {
	position: relative;
	padding: 1em;
	border-top: 1px solid #ccc;
}

#messagebody p.image-attachment a.image-link {
	float: left;
	display: block;
	margin-right: 2em;
	min-width: 160px;
	min-height: 60px;
	text-align: center;
}

#messagebody p.image-attachment .image-filename {
	display: block;
	font-weight: bold;
	line-height: 1.6em;
}

#messagebody p.image-attachment .image-filesize {
	padding-right: 1em;
}

#messagebody p.image-attachment .attachment-links a {
	margin-right: 0.6em;
}

#messagepartcontainer {
	position: absolute;
	top: 42px;
	left: 232px;
	right: 0;
	bottom: 0;
}

#messagepartframe {
	border: 0;
	width: 100%;
	height: 100%;
}

#messagepartheader {
	position: absolute;
	top: 42px;
	left: 0;
	width: 220px;
	bottom: 0;
}

#messagepartheader table {
	table-layout: fixed;
	overflow: hidden;
}

#messagepartheader table td {
	text-overflow: ellipsis;
}

#messagepartheader table td.title {
	width: 60px;
}


/*** message composition ***/

#composeview-left {
	position: absolute;
	top: 0;
	left: 0;
	width: 250px;
	bottom: 0;
}

#composeview-right {
	position: absolute;
	top: 0;
	left: 262px;
	right: 0;
	bottom: 0;
}

#compose-contacts {
	position: absolute;
	top: 42px;
	left: 0;
	width: 100%;
	bottom: 0;
}

#composequicksearch {
	position: relative;
	padding: 4px;
	background: #c7e3ef;
}

#composequicksearch .searchbox input {
	width: 100%;
	height: 26px;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

#composequicksearch #searchmenulink {
	width: 15px;
}

#compose-contacts #directorylist {
	border-bottom: 4px solid #c7e3ef;
}

#compose-contacts .scroller {
	top: 65px;
	border-top: 1px solid #fff;
}

#contacts-table {
	table-layout: fixed;
}

#contacts-table td {
	width: 100%;
}

#contacts-table td span {
	display: block;
}

#contacts-table td span.email {
	display: inline;
	color: #69939e;
	font-style: italic;
	margin-left: 0.5em;
}

#compose-contacts li a, #contacts-table td {
	background: url(images/listicons.png) -100px 0 no-repeat;
	overflow: hidden;
	padding-left: 36px;
	text-overflow: ellipsis;
}

#contacts-table td.contactgroup a {
	color: #376572;
	text-decoration: none;
}

#contacts-table td.contactgroup a span {
	display: inline-block;
	font-size: 16px;
	font-weight: bold;
	line-height: 11px;
	margin-left: 0.3em;
}

#contacts-table tr:first-child td {
	border-top: 0;
}

#compose-contacts li.addressbook a {
	background-position: 6px -766px;
}
/* ... */

